--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^9.0.0"
+  },
+  "engines": {
+    "node": "24.x"
   }
 }
